Risolto bug overflow

--- a/css/style.css
+++ b/css/style.css
@@ -76,6 +76,7 @@ aside{
     height: calc(100vh - 70px);
     background-color: #051e34;
     display: flex;
+    overflow-y: hidden;
     flex-direction: column;
     justify-content: space-between;
 }
@@ -104,6 +105,7 @@ aside span{
 main section{
     width: calc(100% - 200px);
     height: 100%;
+    overflow-y: auto;
 }
 
 #blue-section{
